cdk.out/NetworkStack-hml.template.json
{
 "Resources": {
  "VpcC3027511": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.20.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Confidentiality",
      "Value": "restricted"
     },
     {
      "Key": "Environment",
      "Value": "hml"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "hml-django-vpc-matific"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-hml/Vpc/Vpc/Resource"
   }
  },
  "VpchmldjangosubnetpublicmatificSubnet1Subnet8AE8593F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.20.0.0/26",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "hml-django-subnet-public-matific"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Confidentiality",
      "Value": "restricted"
     },
     {
      "Key": "Environment",
      "Value": "hml"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-public-matificSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ],
    "VpcId": {
     "Ref": "VpcC3027511"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-public-matificSubnet1/Subnet"
   }
  },
  "VpchmldjangosubnetpublicmatificSubnet1RouteTable5A974B13": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Confidentiality",
      "Value": "restricted"
     },
     {
      "Key": "Environment",
      "Value": "hml"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-public-matificSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ],
    "VpcId": {
     "Ref": "VpcC3027511"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-public-matificSubnet1/RouteTable"
   }
  },
  "VpchmldjangosubnetpublicmatificSubnet1RouteTableAssociation8FB26248": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpchmldjangosubnetpublicmatificSubnet1RouteTable5A974B13"
    },
    "SubnetId": {
     "Ref": "VpchmldjangosubnetpublicmatificSubnet1Subnet8AE8593F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-public-matificSubnet1/RouteTableAssociation"
   }
  },
  "VpchmldjangosubnetpublicmatificSubnet1DefaultRoute717A0745": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGW488B0FEB"
    },
    "RouteTableId": {
     "Ref": "VpchmldjangosubnetpublicmatificSubnet1RouteTable5A974B13"
    }
   },
   "DependsOn": [
    "VpcVPCGW42EC8516"
   ],
   "Metadata": {
    "aws:cdk:path": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-public-matificSubnet1/DefaultRoute"
   }
  },
  "VpchmldjangosubnetpublicmatificSubnet1EIPB457F08B": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Confidentiality",
      "Value": "restricted"
     },
     {
      "Key": "Environment",
      "Value": "hml"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-public-matificSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-public-matificSubnet1/EIP"
   }
  },
  "VpchmldjangosubnetpublicmatificSubnet1NATGatewayB6E941EA": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "VpchmldjangosubnetpublicmatificSubnet1EIPB457F08B",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "VpchmldjangosubnetpublicmatificSubnet1Subnet8AE8593F"
    },
    "Tags": [
     {
      "Key": "Confidentiality",
      "Value": "restricted"
     },
     {
      "Key": "Environment",
      "Value": "hml"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-public-matificSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ]
   },
   "DependsOn": [
    "VpchmldjangosubnetpublicmatificSubnet1DefaultRoute717A0745",
    "VpchmldjangosubnetpublicmatificSubnet1RouteTableAssociation8FB26248"
   ],
   "Metadata": {
    "aws:cdk:path": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-public-matificSubnet1/NATGateway"
   }
  },
  "VpchmldjangosubnetpublicmatificSubnet2SubnetBAF85339": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.20.0.64/26",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "hml-django-subnet-public-matific"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Confidentiality",
      "Value": "restricted"
     },
     {
      "Key": "Environment",
      "Value": "hml"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-public-matificSubnet2"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ],
    "VpcId": {
     "Ref": "VpcC3027511"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-public-matificSubnet2/Subnet"
   }
  },
  "VpchmldjangosubnetpublicmatificSubnet2RouteTable4133E35E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Confidentiality",
      "Value": "restricted"
     },
     {
      "Key": "Environment",
      "Value": "hml"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-public-matificSubnet2"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ],
    "VpcId": {
     "Ref": "VpcC3027511"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-public-matificSubnet2/RouteTable"
   }
  },
  "VpchmldjangosubnetpublicmatificSubnet2RouteTableAssociationB7B2C1AF": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpchmldjangosubnetpublicmatificSubnet2RouteTable4133E35E"
    },
    "SubnetId": {
     "Ref": "VpchmldjangosubnetpublicmatificSubnet2SubnetBAF85339"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-public-matificSubnet2/RouteTableAssociation"
   }
  },
  "VpchmldjangosubnetpublicmatificSubnet2DefaultRouteC4A7245B": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "VpcIGW488B0FEB"
    },
    "RouteTableId": {
     "Ref": "VpchmldjangosubnetpublicmatificSubnet2RouteTable4133E35E"
    }
   },
   "DependsOn": [
    "VpcVPCGW42EC8516"
   ],
   "Metadata": {
    "aws:cdk:path": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-public-matificSubnet2/DefaultRoute"
   }
  },
  "VpchmldjangosubnetprivatematificSubnet1Subnet3AD4D28F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.20.4.0/22",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "hml-django-subnet-private-matific"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Confidentiality",
      "Value": "restricted"
     },
     {
      "Key": "Environment",
      "Value": "hml"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-private-matificSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ],
    "VpcId": {
     "Ref": "VpcC3027511"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-private-matificSubnet1/Subnet"
   }
  },
  "VpchmldjangosubnetprivatematificSubnet1RouteTable9C5707D8": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Confidentiality",
      "Value": "restricted"
     },
     {
      "Key": "Environment",
      "Value": "hml"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-private-matificSubnet1"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ],
    "VpcId": {
     "Ref": "VpcC3027511"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-private-matificSubnet1/RouteTable"
   }
  },
  "VpchmldjangosubnetprivatematificSubnet1RouteTableAssociation1B3297A2": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpchmldjangosubnetprivatematificSubnet1RouteTable9C5707D8"
    },
    "SubnetId": {
     "Ref": "VpchmldjangosubnetprivatematificSubnet1Subnet3AD4D28F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-private-matificSubnet1/RouteTableAssociation"
   }
  },
  "VpchmldjangosubnetprivatematificSubnet1DefaultRoute4850E623": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpchmldjangosubnetpublicmatificSubnet1NATGatewayB6E941EA"
    },
    "RouteTableId": {
     "Ref": "VpchmldjangosubnetprivatematificSubnet1RouteTable9C5707D8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-private-matificSubnet1/DefaultRoute"
   }
  },
  "VpchmldjangosubnetprivatematificSubnet2SubnetA74A5D00": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.20.8.0/22",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "hml-django-subnet-private-matific"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Confidentiality",
      "Value": "restricted"
     },
     {
      "Key": "Environment",
      "Value": "hml"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-private-matificSubnet2"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ],
    "VpcId": {
     "Ref": "VpcC3027511"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-private-matificSubnet2/Subnet"
   }
  },
  "VpchmldjangosubnetprivatematificSubnet2RouteTable5B697AE9": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Confidentiality",
      "Value": "restricted"
     },
     {
      "Key": "Environment",
      "Value": "hml"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-private-matificSubnet2"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ],
    "VpcId": {
     "Ref": "VpcC3027511"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-private-matificSubnet2/RouteTable"
   }
  },
  "VpchmldjangosubnetprivatematificSubnet2RouteTableAssociationBAA3C5E8": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "VpchmldjangosubnetprivatematificSubnet2RouteTable5B697AE9"
    },
    "SubnetId": {
     "Ref": "VpchmldjangosubnetprivatematificSubnet2SubnetA74A5D00"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-private-matificSubnet2/RouteTableAssociation"
   }
  },
  "VpchmldjangosubnetprivatematificSubnet2DefaultRouteEB8C8313": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "VpchmldjangosubnetpublicmatificSubnet1NATGatewayB6E941EA"
    },
    "RouteTableId": {
     "Ref": "VpchmldjangosubnetprivatematificSubnet2RouteTable5B697AE9"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-hml/Vpc/Vpc/hml-django-subnet-private-matificSubnet2/DefaultRoute"
   }
  },
  "VpcIGW488B0FEB": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Confidentiality",
      "Value": "restricted"
     },
     {
      "Key": "Environment",
      "Value": "hml"
     },
     {
      "Key": "ManagedBy",
      "Value": "cdk"
     },
     {
      "Key": "Name",
      "Value": "hml-django-vpc-matific"
     },
     {
      "Key": "Owner",
      "Value": "platform-team"
     },
     {
      "Key": "Project",
      "Value": "django-ecs"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-hml/Vpc/Vpc/IGW"
   }
  },
  "VpcVPCGW42EC8516": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "VpcIGW488B0FEB"
    },
    "VpcId": {
     "Ref": "VpcC3027511"
    }
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-hml/Vpc/Vpc/VPCGW"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/0WOzQqDMBCEn8V7TFXw0KNIKV5a0eK1rHFL408iZqMU8d2LtehpZj6GYQLuhwH3HJiMK6rGbWXJ55xANAwm80QR8LnoBYtfqkhjltqylSK3pUJa2eEybQkfULZ48INFxmghgaRWe3k1lyRd5QZ0BcIJPiwd5AiEx3CiCAeFe2F78k8REYh3h4oWlqHRdhC/3bul3m6//nRhSlfIa3MaA4/7Zx46tZHSHawi2SHPNv0Cf451/BABAAA="
   },
   "Metadata": {
    "aws:cdk:path": "NetworkStack-hml/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "NatInstanceNatInstanceSkipped7FE712D8": {
   "Value": "NAT instance disabled"
  },
  "ExportsOutputRefVpchmldjangosubnetprivatematificSubnet1Subnet3AD4D28F175E1636": {
   "Value": {
    "Ref": "VpchmldjangosubnetprivatematificSubnet1Subnet3AD4D28F"
   },
   "Export": {
    "Name": "NetworkStack-hml:ExportsOutputRefVpchmldjangosubnetprivatematificSubnet1Subnet3AD4D28F175E1636"
   }
  },
  "ExportsOutputRefVpchmldjangosubnetprivatematificSubnet2SubnetA74A5D00494652B2": {
   "Value": {
    "Ref": "VpchmldjangosubnetprivatematificSubnet2SubnetA74A5D00"
   },
   "Export": {
    "Name": "NetworkStack-hml:ExportsOutputRefVpchmldjangosubnetprivatematificSubnet2SubnetA74A5D00494652B2"
   }
  },
  "ExportsOutputRefVpcC302751171D26A23": {
   "Value": {
    "Ref": "VpcC3027511"
   },
   "Export": {
    "Name": "NetworkStack-hml:ExportsOutputRefVpcC302751171D26A23"
   }
  },
  "ExportsOutputRefVpchmldjangosubnetpublicmatificSubnet1Subnet8AE8593FC2E35FED": {
   "Value": {
    "Ref": "VpchmldjangosubnetpublicmatificSubnet1Subnet8AE8593F"
   },
   "Export": {
    "Name": "NetworkStack-hml:ExportsOutputRefVpchmldjangosubnetpublicmatificSubnet1Subnet8AE8593FC2E35FED"
   }
  },
  "ExportsOutputRefVpchmldjangosubnetpublicmatificSubnet2SubnetBAF8533940DFA735": {
   "Value": {
    "Ref": "VpchmldjangosubnetpublicmatificSubnet2SubnetBAF85339"
   },
   "Export": {
    "Name": "NetworkStack-hml:ExportsOutputRefVpchmldjangosubnetpublicmatificSubnet2SubnetBAF8533940DFA735"
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
